cmake_minimum_required(VERSION 3.16)

project(robot_runtime
    VERSION 0.1.0
    DESCRIPTION "Generic multi-axis robot runtime library"
    LANGUAGES CXX
)

option(ROBOT_RUNTIME_BUILD_SHARED "Build robot_runtime as a shared library" ON)
option(ROBOT_RUNTIME_BUILD_EXAMPLES "Build examples" ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CIA402_SDK_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party/cia402")
set(CIA402_INCLUDE_DIR "${CIA402_SDK_DIR}/include")
set(CIA402_LIBRARY "${CIA402_SDK_DIR}/lib/libcia402.so")

set(ROBOT_INTERFACE_SDK_DIR
    "${CMAKE_CURRENT_SOURCE_DIR}/third_party/robot_interface"
)
set(ROBOT_INTERFACE_INCLUDE_DIR "${ROBOT_INTERFACE_SDK_DIR}/include")
set(ROBOT_INTERFACE_PUBLIC_HEADER
    "${ROBOT_INTERFACE_INCLUDE_DIR}/robot_data.h"
)

set(ROBOT_RUNTIME_SDK_DIR "${CMAKE_CURRENT_SOURCE_DIR}/sdk")
set(ROBOT_RUNTIME_PUBLIC_INCLUDE_DIR "${ROBOT_RUNTIME_SDK_DIR}/include")
set(ROBOT_RUNTIME_PUBLIC_HEADER
    "${ROBOT_RUNTIME_PUBLIC_INCLUDE_DIR}/robot_runtime/robot_runtime.h"
)
set(ROBOT_RUNTIME_LIBRARY_OUTPUT_DIR "${ROBOT_RUNTIME_SDK_DIR}/lib")

if(NOT EXISTS "${CIA402_INCLUDE_DIR}/cia402/cia402.h" OR
   NOT EXISTS "${CIA402_LIBRARY}" OR
   NOT EXISTS "${ROBOT_INTERFACE_PUBLIC_HEADER}" OR
   NOT EXISTS "${ROBOT_RUNTIME_PUBLIC_HEADER}")
    message(FATAL_ERROR
        "SDK submodules are not initialized. Run: "
        "git submodule update --init --recursive"
    )
endif()

add_library(cia402::cia402 SHARED IMPORTED GLOBAL)

set_target_properties(cia402::cia402 PROPERTIES
    IMPORTED_LOCATION "${CIA402_LIBRARY}"
    INTERFACE_INCLUDE_DIRECTORIES "${CIA402_INCLUDE_DIR}"
)

file(MAKE_DIRECTORY "${ROBOT_RUNTIME_LIBRARY_OUTPUT_DIR}")

if(ROBOT_RUNTIME_BUILD_SHARED)
    set(ROBOT_RUNTIME_LIBRARY_TYPE SHARED)
else()
    set(ROBOT_RUNTIME_LIBRARY_TYPE STATIC)
endif()

add_library(robot_runtime ${ROBOT_RUNTIME_LIBRARY_TYPE}
    src/robot_runtime.cpp
)

add_library(robot_runtime::robot_runtime ALIAS robot_runtime)

target_include_directories(robot_runtime
    PUBLIC
        $<BUILD_INTERFACE:${ROBOT_RUNTIME_PUBLIC_INCLUDE_DIR}>
        $<BUILD_INTERFACE:${ROBOT_INTERFACE_INCLUDE_DIR}>
        $<INSTALL_INTERFACE:include>
)

target_link_libraries(robot_runtime
    PUBLIC
        cia402::cia402
)

set_target_properties(robot_runtime PROPERTIES
    OUTPUT_NAME robot_runtime
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR}
    PUBLIC_HEADER "${ROBOT_RUNTIME_PUBLIC_HEADER}"
    LIBRARY_OUTPUT_DIRECTORY "${ROBOT_RUNTIME_LIBRARY_OUTPUT_DIR}"
    ARCHIVE_OUTPUT_DIRECTORY "${ROBOT_RUNTIME_LIBRARY_OUTPUT_DIR}"
    RUNTIME_OUTPUT_DIRECTORY "${ROBOT_RUNTIME_LIBRARY_OUTPUT_DIR}"
    CXX_VISIBILITY_PRESET hidden
    VISIBILITY_INLINES_HIDDEN YES
)
